<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Schatzsuche</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="collected">Collected : </string>
    <string name="reset">reset</string>
    <string name="refresh">refresh</string>
    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>
    <string name="unknown">unknown</string>
    <string name="title_activity_tracking">TrackingActivity</string>

</resources>
